--- a/.github/workflows/docker_PR.yml
+++ b/.github/workflows/docker_PR.yml
@@ -17,18 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Build image & Publish to Registry
-      env:
-        SHA8: ${GITHUB_SHA::8}
-        GITHUB_REPOSITORY: ${{ github.repository }}
-      uses: elgohr/Publish-Docker-Github-Action@master
-      with:
-        # <USER>/<REPO>/<DOCKER-IMAGE>
-        name: dtpnk/docker-portfolio/docker-portfolio
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        registry: docker.pkg.github.com
-        tags: "dev"
+    - run: pwd && ls -lha
 
 
 
