--- a/.github/workflows/docker_PR.yml
+++ b/.github/workflows/docker_PR.yml
@@ -5,12 +5,7 @@ on:
     branches: 
       - master
 
-env:
-  GITHUB_USER: ${{ secrets.GH_USER }}
-  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-
 jobs:
-
   build-docker:
     runs-on: ubuntu-latest
 
@@ -25,9 +20,9 @@ jobs:
       with:
         # <USER>/<REPO>/<DOCKER-IMAGE>
         name: dtpnk/docker-portfolio/docker-portfolio
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-        registry: docker.pkg.github.com
+        username: ${{ secrets.GH_USER }}
+        password: ${{ secrets.GH_TOKEN }}
+        registry: "ghcr.io"
         tags: "dev"
 
 
