Build the image for multi arch

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,7 +23,11 @@ jobs:
         username: ${{ secrets.GH_USER }}
         password: ${{ secrets.GH_TOKEN }}
         registry: "ghcr.io"
-        tags: "latest"
+        platforms: linux/amd64, linux/arm64
+        tags: |
+          "latest"
+          "${SHA8}"
+          
 
 
 
